FIX | Refactor navbar on mobile responsiveness

--- a/public/styles/header/header.css
+++ b/public/styles/header/header.css
@@ -2,8 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  width: auto;
+  width: 100vw;
   height: 100vh;
   transition: all 0.3s ease-in-out;
   background-color: rgba(0, 0, 0, 0);
@@ -113,7 +112,7 @@ footer {
   box-sizing: border-box;
   padding: 5px 10px;
   background-color: #d4d4d4;
-  z-index: 50;
+  z-index: 10;
 }
 
 @media all and (max-width: 767px) {
